[package]
name = "read_csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
ustr = { version = "=0.9.0", features = ["serialization"] }
